<resources>
    <string name="app_name">resInventa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_the_organization">About Organization</string>
    <string name="valid_member">Are you member of us?</string>
    <string name="need_account">Need an account?</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="facebook_app_id">2197774863868195</string>
    <string name="fb_login_protocol_scheme">fb2197774863868195</string>
    <string name="resinventa">resInventa</string>
    <string name="askOrgOrUser">Are you an organization?</string>
    <string name="yesIamOrganization">YES</string>
    <string name="noIamNot">NO</string>
    <string name="follow">FOLLOW</string>
    <string name="event_history">Event History</string>
    <string name="following">Following</string>
    <string name="org_profile">Organization Profile</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="info"> By continuing you accept our Privacy Policy and Terms of Use</string>
    <string name="google">SIGN IN WITH GOOGLE</string>

    <string name="string_password">Enter your password</string>
    <string name="string_name">Enter your name</string>
    <string name="or">OR</string>
    <string name="user_name">First name</string>
    <string name="surname">Last name</string>
    <string name="useremail">Email*</string>
    <string name="user_password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="organization_name">Organization Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_my_location" />
    <string name="pref_pref1" translatable="false">pref_pref1</string>
    <string name="pref_pref2" translatable="false">pref_pref2</string>
    <string name="pref_pref3" translatable="false">pref_pref3</string>
    <string name="preferences_edittext_default">D</string>
    <string name="title_activity_maps">Map</string>

    <string name="eventsNear">See Events Near</string>
    <string name="location_name">Bilkent</string>
    <string name="Button2">Search</string>
    <string name="Button1">Create</string>
    <string name="current_date"></string>
    <string name="event_name1">METU Campus Event</string>
    <string name="event_time1">13:30 GMT +3</string>
    <string name="event_loc1">Department of Science</string>
    <string name="event_name2">Jazz Concert</string>
    <string name="event_time2">17:30 GMT +3</string>
    <string name="event_loc2">Presidential Conference Hall</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_sign_up">SignUpActivity</string>

</resources>
