<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    android:layout_width="match_parent"
    android:layout_height="410dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#B6D72C"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:focusableInTouchMode="false"
            android:scaleType="fitXY"
            android:src="@drawable/images" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/org_profile"
            android:textColor="#fff"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:clickable="true"
            android:text="@string/follow"
            android:textColor="#7a8498"
            android:textStyle="bold" />


        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            app:tabIndicatorColor="@color/colorPrimary">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_history"
                android:clickable="true"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:clickable="true"
                android:textColor="#fff"
                android:textSize="21sp" />

        </android.support.design.widget.TabLayout>

    </LinearLayout>




    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="355dp"
        android:clickable="true"
        android:focusable="true"
        app:itemBackground="@color/colorPrimaryDark"
        app:itemHorizontalTranslationEnabled="true"
        app:itemTextColor="@android:color/darker_gray"
        app:menu="@menu/navigation" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />


</LinearLayout>